syntax = "proto3";

package identityDevice;


service IdentityService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
    string deviceId = 6;
    string deviceInfo = 7;
}
message RegisterResponse {
    string message = 1;
}